@@ -28,4 +28,26 @@ describe "multi_run plugin" do
     body("/b/a").should == 'b2'
     body.should == 'c'
   end
+
+  it "works when subclassing" do
+    app(:multi_run) do |r|
+      r.multi_run
+      "c"
+    end
+
+    app.run "a", Class.new(Roda).class_eval{route{"a1"}; app}
+    body("/a").should == 'a1'
+
+    a = app
+    @app = Class.new(a)
+
+    a.run "b", Class.new(Roda).class_eval{route{"b2"}; app}
+    app.run "b", Class.new(Roda).class_eval{route{"b1"}; app}
+
+    body("/a").should == 'a1'
+    body("/b").should == 'b1'
+
+    @app = a
+    body("/b").should == 'b2'
+  end
 end
